use pv-lite as backend

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.0.1",
   "scripts": {
     "commit": "git cz",
+    "deploy": "npm run build && cp ./dist/Visualizer* ../hpccloud-client/public/workflows/",
     "build": "vue-cli-service build client/index.js --target lib --formats umd-min --name Visualizer",
     "lint": "vue-cli-service lint",
     "semantic-release": "semantic-release",
